<resources>
    <string name="app_name">EventiFind</string>
    <string name="Feed">Feed</string>
    <string name="Map">Map</string>
    <string name="Calendar">Calendar</string>
    <string name="Account">Account</string>
    <string name="Log_out">Log out</string>
    <string name="OK">OK</string>
    <string name="Cancel">CANCEL</string>
    <string name="Create_event">Create event</string>
    <string name="Name_event">Event name</string>
    <string name="Description">Event description</string>
    <string name="Date_select">Tap to select Date</string>
    <string name="Location_select">Tap to select location</string>
    <string name="Fields_empty">Fields must not be empty</string>
    <string name="Event_created">Event created</string>
    <string name="Unnamed_location">Unnamed location</string>
    <string name="Join">Tap to join</string>
    <string name="Unjoin">Tap to unjoin</string>
    <string name="Joined">Event joined</string>
    <string name="Unjoined">Event unjoined</string>
    <string name="Joined_events">Joined Events</string>
    <string name="My_events">My events</string>
    <string name="Hosted_by">Hosted by: %1$s</string>
    <string name="Delete">Delete</string>
    <string name="Event_deleted">Event deleted or not in range</string>
    <string name="Location_unavailable">Location unavailable. Tap to retry</string>
    <string name="Internet_unavailable">Internet connection unavailable. Tap to retry</string>
    <string name="Not_Today">No events found on selected date</string>
    <string name="Add_admin">Add admin</string>
    <string name="Email">User\'s email</string>
    <string name="User_not_exist">User with this email does not exist</string>
    <string name="User_admined">User made admin</string>
    <string name="Dark">Dark Mode</string>
    <string name="More">More</string>
    <string name="Event_Today">You have an event today: %1$s</string>
    <string name="Event_Tomorrow">You have an event tomorrow: %1$s</string>
</resources>
